styles/getting-started/_getting-started-message.scss
.getting-started-message {
  position: absolute;
  z-index: 400;
  min-width: 300px;
  padding: 0 10px;
  font-size: $font-size-xs;
  &.position-middle {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  &.position-top {
    bottom: 100%;
    margin-bottom: 10px;
  }
  &.position-bottom {
    top: 100%;
    margin-top: 10px;
  }
  &.alignment-left {
    left: 0;
    text-align: left;
  }
  &.alignment-right {
    right: 0;
    text-align: right;
  }
  &.alignment-center {
    text-align: center;
  }
}
.getting-started-message-controls {
  margin-top: 10px;
}
.getting-started-message-control {
  margin-right: 10px;
  @each $theme-name, $theme-color in $theme-colors {
    .theme-#{$theme-name} & {
      background-color: darken($theme-color, 9%);
      &:hover:active {
        background-color: darken($theme-color, 12%);
      }
    }
  }
  &.warning {
    background-color: $red;
    &:hover:active {
      background-color: darken($red, 10%);
    }
  }
}

